@startuml
package modelo {
    class Usuario_registrado {
        - nombre: String
        - usuario: String
        - contraseña: String
        - rutinas: ArrayList<Rutina>

        + Usuario_registrado(nombre: String, usuario: String, contraseña: String, rutinas: ArrayList<Rutina>)
        + getNombre(): String
        + setNombre(nombre: String): void
        + getUsuario(): String
        + setUsuario(usuario: String): void
        + getContraseña(): String
        + setContraseña(contraseña: String): void
        + getRutinas(): ArrayList<Rutina>
        + setRutinas(rutinas: ArrayList<Rutina>): void
        + verEjercicios(rutina: Rutina): ArrayList<Ejercicio>
    }

    class Rutina {
        - ID: int
        - ejercicios: ArrayList<Ejercicio>

        + Rutina(ID: int, ejercicios: ArrayList<Ejercicio>)
        + getID(): int
        + setID(ID: int): void
        + getEjercicios(): ArrayList<Ejercicio>
        + setEjercicios(ejercicios: ArrayList<Ejercicio>): void
        + añadirEjercicioRutina(ejercicio: Ejercicio): void
        + eliminarEjercicioRutina(ejercicio: Ejercicio): void
    }

    class Ejercicio {
        - nombre: String
        - seccion: String
        - musculo: String

        + Ejercicio(nombre: String, musculo: String, seccion: String)
        + getNombre(): String
        + setNombre(nombre: String): void
        + getSeccion(): String
        + setSeccion(seccion: String): void
        + getMusculo(): String
        + setMusculo(musculo: String): void
        + toString(): String
    }

    class Gestor {
        - url: String
        - usuario: String
        - contraseña: String
        - conexion: Connection
        - consulta: Statement

        + Gestor()
        + desconectar(): void
        + comprobarUsuario(usuario: String): boolean
        + insertarUsuario(nombre: String, usuario: String, contraseña: String): boolean
        + comprobarUsuarioConClave(usuario: String, contraseña: String): boolean
        + obtenerEjercicios(): ArrayList<Ejercicio>
        + seleccionarUsuario(usuario: String): Usuario_registrado
        + cambiarNombre(usuario: String, nuevoNombre: String): boolean
        + cambiarUsuario(usuario: String, nuevoUsuario: String): boolean
        + cambiarContraseña(usuario: String, nuevaClave: String): boolean
        + rutinas(usuario: String): ArrayList<Rutina>
        + ejercicios(id: int): ArrayList<Ejercicio>
        + agregarRutina(usuario: String): boolean
        + eliminarRutina(id: int): boolean
        + agregarEjercicio(id: int, ejercicio: String, musculo: String): boolean
        + obtenerMusculos(): ArrayList<String>
        + obtenerEjerciciosPorMusculo(musculoSeleccionado: String): ArrayList<Ejercicio>
        + eliminarEjercicio(id: int, nombreEjercicio: String): boolean
    }
}
class EstadoSesion {
        - usuario_activo: Usuario_registrado

        + EstadoSesion()
        + getUsuario_activo(): Usuario_registrado
        + setUsuario_activo(usuario_activo: Usuario_registrado): void
    }
Usuario_registrado "1" o-- "1..*" Rutina
Rutina "1" o-- "0..*" Ejercicio
Gestor "1" --> "*" Usuario_registrado
Gestor "1" --> "*" Rutina
Gestor "1" --> "*" Ejercicio
EstadoSesion "1" o-- "1" Usuario_registrado




@enduml